[metadata]
name = Synalysis2Kaitai
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/synalysis2kaitai
description = A convertor of grammars for SynalizeIt and Hexinator to Kaitai Struct
long_description = file: README.md
keywords = binary, format, reverse engineering, reversing, parser, grammar
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Reverse Engineering

[options]
python_requires = >=3.4
zip_safe = True
packages = Synalysis2Kaitai
setup_requires = setuptools_scm;
install_requires =
	Endianness @ git+https://gitlab.com/KOLANICH/Endianness.py.git
	ruamel.yaml
	plumbum @ git+https://github.com/tomerfiliba/plumbum.git
	beautifulsoup4
	lxml
